# EXOVIS_AMNC

./: README.md
controllers/exvis/exvis_grab/: exo.lua  exo_controller.cpp  exo_joint_module.cpp  exo_joint_module.h  exo_joint_module_parameters.h  neural_controller.cpp  neural_controller.h
controllers/exvis/exvis_joystick/: joystick_teleop.cpp
projects/exvis/exvis_grab/catkin_ws/csv/: rAnkle.csv  rHip.csv
projects/exvis/exvis_grab/catkin_ws/csv/book/: lAnkle.csv  lHip.csv  lKnee.csv  rAnkle.csv  rHip.csv  rKnee.csv
projects/exvis/exvis_grab/catkin_ws/csv/default/: lAnkle.csv  lHip.csv  lKnee.csv  rKnee.csv
projects/exvis/exvis_grab/catkin_ws/csv/targets/: exo_rhip.csv  exo_rknee.csv
projects/exvis/exvis_grab/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
projects/exvis/exvis_grab/catkin_ws/devel/lib/exvis_grab/: exvis_grab_node
projects/exvis/exvis_grab/catkin_ws/devel/lib/exvis_joystick/: exvis_joystick_node
projects/exvis/exvis_grab/catkin_ws/devel/lib/pkgconfig/: exvis_grab.pc  exvis_joystick.pc
projects/exvis/exvis_grab/catkin_ws/devel/share/exvis_grab/cmake/: exvis_grabConfig.cmake
projects/exvis/exvis_grab/catkin_ws/devel/share/exvis_joystick/cmake/: exvis_joystickConfig.cmake
projects/exvis/exvis_grab/catkin_ws/src/exvis_grab/: CMakeLists.txt  package.xml
projects/exvis/exvis_grab/catkin_ws/src/exvis_grab/launch/: exvis_grab_realexo.launch  exvis_grab_simulation.launch
projects/exvis/exvis_grab/catkin_ws/src/joystick/: CMakeLists.txt
projects/exvis/exvis_interface/catkin_ws/devel/: .catkin  .rosinstall
projects/exvis/exvis_interface/catkin_ws/devel/lib/exvis_interface/: exvis_interface_node
projects/exvis/exvis_interface/catkin_ws/devel/lib/pkgconfig/: exvis_interface.pc
projects/exvis/exvis_interface/catkin_ws/devel/share/exvis_interface/cmake/: exvis_interfaceConfig.cmake
projects/exvis/exvis_interface/catkin_ws/src/exvis_interface/: CMakeLists.txt
projects/exvis/exvis_messager/catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh
projects/exvis/exvis_messager/catkin_ws/devel/lib/exvis_messager/: exvis_messager_node
projects/exvis/exvis_messager/catkin_ws/devel/lib/pkgconfig/: exvis_messager.pc
projects/exvis/exvis_messager/catkin_ws/devel/share/exvis_messager/cmake/: exvis_messagerConfig.cmake
projects/exvis/exvis_messager/catkin_ws/src/exvis_messager/: CMakeLists.txt
utils/ann-library/: dmp.cpp  dmp.h  gradn.cpp  gradn.h  rbf.cpp  rbf.h  so2cpg.h
utils/real_robots/exvis/exvis_real/: CommuCAN.cpp  CommuCAN.h  ExvisCommuCANAssem.cpp  ExvisCommuCANAssem.h  ExvisCommuCANMain.cpp  ExvisCommuCANROS.cpp  ExvisCommuCANROS.h  PCANBasic.h
utils/real_robots/exvis/exvis_real/Old/: CommuCAN.cpp  CommuCAN.h  ExvisCommuCANAssem.cpp  ExvisCommuCANAssem.h  ExvisCommuCANROS.cpp  ExvisCommuCANROS.h  ExvisRealCANAssem.cpp  ExvisRealCANAssem.h  ExvisRealCANMain.cpp  ExvisRealCANROS.cpp  ExvisRealCANROS.h
utils/real_robots/exvis/exvis_real/pcanbasic/: PCANBasic.h  readme.txt
utils/real_robots/exvis/exvis_real/pcanbasic/src/: pcaninfo.h
utils/simulations/: exovis_oneleg_grab.ttt
